# Espikify

./: README.md  pyproject.toml
src/espikify/: cli.py  converter.py
src/espikify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/espikify/runtimes/event_driven/: Connection.c  Connection.h  NetworkController.c  NetworkController.h  Neuron.c  Neuron.h  functional.c  functional.h
src/espikify/runtimes/optimized/: Connection.c  Connection.h  NetworkController.c  NetworkController.h  Neuron.c  Neuron.h  functional.c  functional.h
src/espikify/templates/: test_connection_file.templ  test_controller_fwr_conf.templ  test_enc_file.templ  test_hid_file.templ  test_hidout_file.templ  test_inhid_file.templ  test_neuron_file.templ
src/espikify/utils/: convert_pt_utils.py  wandb_utils.py
tests/: optimized-snn.ino  snn-event-driven.ino
